# gotts-wallet

./: .gitignore  .travis.yml  Cargo.toml  README.md
.ci/: general-jobs  release-jobs
.hooks/: pre-commit
api/: Cargo.toml
api/src/: foreign.rs  foreign_rpc.rs  lib.rs  owner.rs  owner_rpc.rs
api/tests/: slate_versioning.rs
api/tests/slates/: v1_req.slate  v1_res.slate
config/: Cargo.toml
config/src/: comments.rs  config.rs  lib.rs  types.rs
controller/: Cargo.toml
controller/src/: command.rs  controller.rs  display.rs  error.rs  lib.rs
controller/tests/: accounts.rs  check.rs  file.rs  invoice.rs  repost.rs  restore.rs  self_send.rs  transaction.rs
impls/: Cargo.toml
impls/src/: error.rs  lib.rs  seed.rs
impls/src/adapters/: file.rs  http.rs  keybase.rs  mod.rs  null.rs
impls/src/backends/: lmdb.rs  mod.rs  wallet_store.rs
impls/src/node_clients/: http.rs  mod.rs
impls/src/test_framework/: mod.rs  testclient.rs
impls/tests/: encryption.rs
libwallet/: Cargo.toml
libwallet/src/: api_impl.rs  error.rs  internal.rs  lib.rs  slate.rs  types.rs  wallet_ser.rs
libwallet/src/api_impl/: foreign.rs  owner.rs  types.rs
libwallet/src/internal/: keys.rs  restore.rs  selection.rs  tx.rs  updater.rs
libwallet/src/slate_versions/: mod.rs  v2.rs
libwallet/tests/: libwallet.rs  slate_versioning.rs
util/: Cargo.toml
util/src/: lib.rs  logger.rs  types.rs
