[package]
name = "gotts_wallet"
version = "0.0.4"
authors = ["Gotts Developers <gotts.tech@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/gottstech/gotts-wallet"
keywords = [ "crypto", "gotts", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.gotts", "**/*.gotts2"]
build = "src/build/build.rs"
edition = "2018"

[[bin]]
name = "gotts-wallet"
path = "src/bin/gotts-wallet.rs"

[workspace]
members = ["api", "config", "controller", "impls", "libwallet", "util"]
exclude = ["integration"]

[dependencies]
clap = { version = "2.31", features = ["yaml"] }
colored = "1.6"
rpassword = "2.0.0"
ctrlc = { version = "3.1", features = ["termination"] }
failure = "0.1"
failure_derive = "0.1"
prettytable-rs = "0.7"
log = "0.4"
linefeed = "0.5"
semver = "0.9"

gotts_wallet_api = { path = "./api", version = "0.0.4" }
gotts_wallet_impls = { path = "./impls", version = "0.0.4" }
gotts_wallet_libwallet = { path = "./libwallet", version = "0.0.4" }
gotts_wallet_controller = { path = "./controller", version = "0.0.4" }
gotts_wallet_config = { path = "./config", version = "0.0.4" }

gotts_wallet_util = { path = "./util", version = "0.0.4" }

[build-dependencies]
built = "0.3"
