[package]
name = "gotts_wallet_libwallet"
version = "0.0.4"
authors = ["Gotts Developers <gotts.tech@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/gottstech/gotts-wallet"
keywords = [ "crypto", "gotts", "mimblewimble" ]
exclude = ["**/*.gotts", "**/*.gotts2"]
#build = "src/build/build.rs"
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
byteorder = "1"
failure = "0.1"
failure_derive = "0.1"
rand = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4.4", features = ["serde"] }
lazy_static = "1"
strum = "0.15"
strum_macros = "0.15"

gotts_wallet_util = { path = "../util", version = "0.0.4" }
gotts_wallet_config = { path = "../config", version = "0.0.4" }
